# opticook

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  main.py  plan.prompt  pyproject.toml  retrieve.py  session_manager.py  shell.nix
backend_temp/: Computations.ipynb  DataTypes+Computations.ipynb  DataTypes.ipynb  RecipeCompilation.py
cook_fsm_backend/: __init__.py  api.py  events.py  fsm.py  helpers.py  sat.py  store.py
cook_fsm_backend/cook_fsm_backend/: __init__.py  settings.py
cook_fsm_backend/cook_fsm_backend/domain/: chef_task.py  instruction.py  session.py
cook_fsm_backend/domain/: chef_task.py  instruction.py  session.py
cooking-collab/: pyproject.toml
cooking-collab/cooking/: models.py  recipe_parser.py
cooking_instructions/: backend.py  tasks.json
cooking_instructions/static/: index.html  main.js  style.css
recipes/: cheesecake.txt  cheesecake2.txt
static/: timer.js
templates/: base.html  chefs.html  cook.html  index.html
urlextract/: extracted_recipe.json  url_extraction.ipynb
